test/must_fail/include_global_two_arguments.ngjs
#!/usr/bin/env ngspicejs
// include_global only has 1-2 args
// linter: ngspicejs-lint
"use strict";

Internal.include_global("xyz.js", true, "zzzz");
echo("xyz=", globalThis.exports.xyz);
